--- a/ConsoleApp1_ProjectVisualSudio/ConsoleApp1_ProjectVisualSudio.csproj
+++ b/ConsoleApp1_ProjectVisualSudio/ConsoleApp1_ProjectVisualSudio.csproj
@@ -5,7 +5,7 @@
     <OutputType>Exe</OutputType>
 	  
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>ConsoleApp1_ProjectVisualSudio.ArrayCreation.String</StartupObject>
+    <StartupObject>ConsoleApp1_ProjectVisualSudio.ArrayCreation.AlternateNumber</StartupObject>
     </PropertyGroup>
 
 </Project>
